--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dauntless",
-  "version": "1.1.0",
-  "description": "Dauntless.js is a minimalist, error-tolerant, highly configurable http(s) request package for Node",
+  "version": "1.1.1",
+  "description": "Dauntless is a minimalist, error-tolerant, highly configurable http(s) request package for Node",
   "main": "./lib/index.js",
   "directories": {
     "lib": "lib"
