--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dauntless",
-  "version": "2.1.2",
+  "version": "2.2.0",
   "description": "Dauntless is a minimalist, error-tolerant, highly configurable http(s) request package for Node",
   "main": "./lib/index.js",
   "directories": {
@@ -13,10 +13,13 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "jsdoc-babel": "^0.3.0"
+    "chai": "^4.1.2",
+    "jsdoc-babel": "^0.3.0",
+    "mocha": "^3.5.3",
+    "nock": "^9.0.14"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
